<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lyt_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_maya"
            android:textAllCaps="true"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:bufferType="spannable"
            android:maxLines="6"
            android:text="@string/txt_summary"
            android:textSize="14sp"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lyt_summary"
        android:paddingBottom="48dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_description_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:bufferType="spannable"
                android:text="@string/txt_description_01"
                android:textAlignment="center"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_description_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:bufferType="spannable"
                android:maxLines="28"
                android:text="@string/txt_description_02"
                android:textSize="14sp"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:text="@string/btn_play"/>
</RelativeLayout>